# chat-rs

./: .env  .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20230818_164458_create_account_table.rs  m20230818_170513_create_session_table.rs  m20230818_222729_create_chat_table.rs  m20230818_222947_create_message_table.rs  m20230819_115126_create_profile_table.rs  m20230819_115446_create_chat_role_table.rs  m20230819_115701_create_chat_x_chat_role_x_profile.rs
backend/src/: endpoints.rs  main.rs  service.rs
backend/src/endpoints/: account.rs  chat.rs  message.rs  notification.rs  profile.rs  search.rs
backend/src/entities/: account.rs  chat.rs  chat_role.rs  chat_x_chat_role_x_profile.rs  message.rs  mod.rs  prelude.rs  profile.rs  sea_orm_active_enums.rs  session.rs
backend/src/service/: account.rs  chat.rs  message.rs  notification.rs  profile.rs  search.rs
frontend/: package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/data/: app-notification.ts  chat-entry.ts  chat-message.ts  notification-type.ts  profile-search-result.ts  user-profile.ts
frontend/src/app/guard/: logged-in.guard.ts  not-logged-in.guard.ts
frontend/src/app/home/: home.component.css  home.component.ts
frontend/src/app/login/: login.component.css  login.component.html  login.component.ts
(+39 files in other folders)
