[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros", "multipart", "tracing"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum-macros = "0.3.8"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-native-tls", "with-uuid", "with-chrono", "sqlx-postgres"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.31.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
